--- a/index.html
+++ b/index.html
@@ -11,51 +11,94 @@
 
 <body>
     <div id="container">
-        <div class="boxes"></div>
-        <h2>Bangers and Mash</h2>
-        <p>You can't go wrong with a fresh order of Bangers and Mash... or can you?
-            Read about the atrocious ways that people around the world have ruined Bangers and Mash.
-            A true horror awaits.
-        </p>
-        <div class="readme-wrapper">
-            <a href="#">Read More</a>
+        <div class="boxes" id="box1">
+            <div class="images"></div>
+            <h2>Bangers and Mash</h2>
+            <p>You can't go wrong with a <span class="fancyword">fresh</span> order of Bangers and Mash... or can you?
+                Read about the atrocious ways that people around the world have ruined Bangers and Mash.
+                A true horror awaits.
+            </p>
+            <div class="readme-wrapper">
+                <a href="#">Read More</a>
+            </div>
         </div>
 
 
-        <div class="boxes"></div>
-        <h2>Tall Tales From a Small Man</h2>
-        <p>Have you ever wondered if the quality of a story is effected by the height of the person telling it?
-            This man will prove that Tall Tales can come in small
-            packages and it might just be the best way to experience it.
-        </p>
-        <div class="readme-wrapper">
-            <a href="#">Read More</a>
+        <div class="boxes" id="box2">
+            <div class="images"></div>
+            <h2>Tall Tales From a Small Man</h2>
+            <p>Have you ever wondered if the <span class="fancyword">quality</span> of a story is effected by the height
+                of the person telling it?
+                This man will prove that Tall Tales can come in small
+                packages and it might just be the best way to experience it.
+            </p>
+            <div class="readme-wrapper">
+                <a href="#">Read More</a>
+            </div>
         </div>
 
 
-        <div class="boxes"></div>
-        <h2>Thinking Out Loud</h2>
-        <p>Thinking out loud can really change the perception of the people around you.
-            Soft murmurs to yourself may seem soothing, but when the room is filled with people
-            that are hanging on your every word, it can be disastrous. Just ask Penelope Gomer, Ceo
-            how bad or good this can go... you be the judge.
-        </p>
-        <div class="readme-wrapper">
-            <a href="#">Read More</a>
+        <div class="boxes" id="box3">
+            <div class="images"></div>
+            <h2>Thinking Out Loud</h2>
+            <p>Thinking out loud can really change the <span class="fancyword">perception</span> of the people around
+                you.
+                Soft murmurs to yourself may seem soothing, but when the room is filled with people
+                that are hanging on your every word, it can be disastrous. Just ask Penelope Gomer, Ceo
+                how bad or good this can go... you be the judge.
+            </p>
+            <div class="readme-wrapper">
+                <a href="#">Read More</a>
+            </div>
         </div>
 
 
-        <div class="boxes"></div>
-        <h2>Perforated Problems</h2>
-        <p>Stacy is a master at box packaging. Every dimension of every package is always perfect.
-            She wraps Christmas presents for most of her neighborhood at no charge and does it with a smile.
-            That is, until 1 pesky neighbor only wants his gift is perforated envelopes. Little does he know, Stacy
-            has a weakness no one sees coming. Stacy will have to face her problems head on in this packaging thriller.
-        </p>
-        <div class="readme-wrapper">
-            <a href="#">Read More</a>
+        <div class="boxes" id="box4">
+            <div class="images"></div>
+            <h2>Perforated Problems</h2>
+            <p>Stacy is a <span class="fancyword">master</span> at box packaging. Every dimension of every package is
+                always perfect.
+                She wraps Christmas presents for most of her neighborhood at no charge and does it with a smile.
+                That is, until 1 pesky neighbor only wants his gift is perforated envelopes. Little does he know, Stacy
+                has a weakness no one sees coming. Stacy will have to face her problems head on in this packaging
+                thriller.
+            </p>
+            <div class="readme-wrapper">
+                <a href="#">Read More</a>
+            </div>
         </div>
-
+        <h1 class="original" id="show1">Breaking Bad</h1>
+        <h1 class="original" id="show2">Rick and Morty</h1>
+        <h1 class="original" id="show3">The Office</h1>
+        <h1 class="additional" id="show4">Parks and Recreation</h1>
+        <h1 class="additional" id="show5">King of the Hill</h1>
+    </div>
+    <div class="list">
+        <ul>
+            <li>Jamie</li>
+            <li>Jen</li>
+            <li>Jeff</li>
+            <li>Logan</li>
+            <li>Sequoya</li>
+        </ul>
+    </div>
+    <div class="list">
+        <ul class="star">
+            <li>Amstredam</li>
+            <li>Hawaii</li>
+            <li>Grand Canyon</li>
+            <li>Machu Picchu</li>
+            <li>Paris</li>
+        </ul>
+    </div>
+    <div class="list">
+        <ul class="star" id="wars">
+            <li>Five Guys</li>
+            <li>Pizza Chef</li>
+            <li>Casa Mexicana</li>
+            <li>Rice Box</li>
+            <li>Odette</li>
+        </ul>
     </div>
 </body>
 
